Fix flexbox form and Odin text overflow

--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,8 @@ main {
     align-items: center;
     justify-content: center;
     gap: 1rem;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .odin img {
@@ -155,62 +157,6 @@ main {
 .simple-text span p{
   margin: 2rem 0;
   text-align: left;
-}
-
-form ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex; 
-  justify-content: space-around; 
-}
-
-form ul div {
-  width: 48%; 
-  display: flex;
-  flex-direction: column;
-  margin-top: 4rem;
-  margin-left: 2rem;
-}
-
-form ul li {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1rem;
-}
-
-form label {
-  margin-bottom: 0.5rem;
-  text-align: left;
-}
-
-
-form input {
-  width: auto;
-  max-width: 50%; 
-  padding: 0.5rem;
-  border: 2px solid #E5E7Eb;
-  border-radius: 4px;
-}
-
-.right-column li {
-  margin-left: -15rem;
-}
-
-.right-column input {
-  width: auto;
-  max-width: 40%; 
-  padding: 0.5rem;
-  border: 2px solid #E5E7Eb;
-  border-radius: 4px;
-}
-
-.main-mid span {
-  font-family: sans-serif;
-  font-size: 2rem;
-  text-align: start;
-  margin: 2rem;
-  font-weight: 600;
 }
 
 .main-bottom div {
@@ -273,3 +219,43 @@ input:invalid + span::before{
   color: #596D48;
   font-weight: 600;
 }
+
+.main-container {
+  display: flex;
+}
+
+form {
+  display: flex;
+}
+
+
+li {
+  display: flex;
+  flex-direction: column;
+}
+
+form div {
+  width: 350px;
+  margin-top: 7rem;
+  margin-left: 2rem;
+}
+
+.main-mid span {
+  font-family: sans-serif;
+  font-size: 2rem;
+  text-align: start;
+  margin: 2rem;
+  font-weight: 600;
+}
+
+form label {
+  margin-bottom: 0.5rem;
+}
+
+input {
+  padding: 0.5rem;
+  border-radius: 4px;
+  border: 2px solid #E5E7Eb;
+  margin-bottom: 0.5rem;
+}
+
